# bound

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  coverage.json  pyproject.toml  roadmap.md  todo.md
architecture/: README.md  adr-001-cli-mcp-hooks-ui.md  adr-002-bound-ui-dashboard.md
bound_integration/: INTEGRATION_REPORT.md  run.json
docs/: architecture.md  concepts.md  contracts.md  demo-scenario.md  integrations.md  lineage.md  pypi-trusted-publishing.md  python-usage.md  release-integrity.md  scoring.md  skills-installation-report.md  status-and-roadmap.md  upgrade-guide.md
examples/: agent_control_loop.py  automatic_plan_workflow.py  flight_booking.py  golden_demo.py  lineage_demo.py  lineage_demo_events.jsonl  plan_to_contract.py  semantic_blind_spot.py  verified_evidence_demo.py
integrations/: conformance_test.py
policies/: public-release.md  standard-agent-prompts.md
scripts/: build_skill_zip.py  generate_demo.py  self_integrate_bound.py
tests/: conftest.py  test_agent_control_loop_example.py  test_agent_feedback.py  test_architecture.py  test_bound_workflow.py  test_calculator.py  test_checkpoint.py  test_cli.py  test_cli_integration_spec.py  test_cli_lineage.py  test_collectors.py  test_contract_evaluator.py  test_contract_quality.py  test_contracts.py  test_evaluator.py  test_evidence.py  test_experiment.py  test_init_project.py  test_integration.py  test_integration_mapping.py  test_lineage.py  test_lineage_api.py  test_lineage_e2e.py  test_lineage_store.py  test_mcp_server.py  test_models.py  test_no_framework_dependency.py  test_policy.py  test_policy_schema.py  test_prompt.py  test_readme_example.py  test_report.py  test_services.py  test_simplified_api.py  test_skills.py  test_sprint2_exit_criteria.py  test_sprint3_exit_criteria.py  test_ui_visual.py  (+7 more)
(+90 files in other folders)
