[project]
name = "bound-policy"
version = "0.7.0"
description = "A deterministic, configurable control policy for agent workflows."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Danny de Bree", email = "ddebree1990@gmail.com" }
]
keywords = [
    "agents",
    "agentic-ai",
    "policy",
    "decision-making",
    "bounded-utility",
    "satisficing",
    "llm",
    "agent-loop",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/Danny-de-bree/bound"
Repository = "https://github.com/Danny-de-bree/bound"
Documentation = "https://github.com/Danny-de-bree/bound#readme"
Issues = "https://github.com/Danny-de-bree/bound/issues"
Changelog = "https://github.com/Danny-de-bree/bound/blob/main/CHANGELOG.md"

[project.scripts]
bound = "bound.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bound"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
